--- a/css/theme.css
+++ b/css/theme.css
@@ -16,3 +16,13 @@ body {
 .theme-showcase .navbar .container {
   width: auto;
 }
+
+form{
+    margin: 0px;
+    padding: 50px;
+}
+
+form textarea{
+    width: 300px;
+    height: auto;
+}
